@@ -30,6 +30,13 @@ echo data > $tmp_in || framework_failure_
 ln $tmp_in $tmp_in2 || framework_failure_
 ln -s $tmp_in $tmp_sym || framework_failure_
 
+# check status=none suppresses all output to stderr
+dd status=none if=$tmp_in of=/dev/null 2> err || fail=1
+test -s err && fail=1
+# check status=none is cumulative with status=noxfer
+dd status=none status=noxfer if=$tmp_in of=/dev/null 2> err || fail=1
+test -s err && fail=1
+
 dd if=$tmp_in of=$tmp_out 2> /dev/null || fail=1
 compare $tmp_in $tmp_out || fail=1
 
