@@ -4,6 +4,8 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 ** New features
 
+  dd now accepts 'status=none' to suppress all informational output.
+
   md5sum now accepts the --tag option to print BSD-style output with GNU
   file name escaping.  This also affects sha1sum, sha224sum, sha256sum,
   sha384sum and sha512sum.
